<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gray"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:gravity="center"
        android:background="@color/main_color"
        android:text="@string/login"
        android:textStyle="bold"
        style="@style/text_style_20_6a3906"/>
    
    <ImageView
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:layout_marginTop="@dimen/dp_100"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/icon"/>
    
    <EditText
        android:id="@+id/et_user"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:inputType="number"
        style="@style/text_style_14_323232"
        android:background="@drawable/btn_gray"
        android:hint="@string/enter_name"
        android:paddingLeft="@dimen/dp_12"/>
    
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_16"
        style="@style/text_style_14_323232"
        android:background="@drawable/btn_gray"
        android:hint="@string/enter_password"
        android:paddingLeft="@dimen/dp_12"/>

    <TextView
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_60"
        android:layout_marginRight="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/btn_main_cornor_4"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/login"
        android:textColor="@color/black"/>

</LinearLayout>