<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_gray">

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/main_color">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:background="@color/transparent"
            android:src="@mipmap/icon_top_back"
            android:padding="@dimen/dp_15"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/approval"
            android:gravity="center"
            style="@style/text_style_16_6a3906"/>

        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:gravity="center"
            style="@style/text_style_12_6a3906"/>

    </LinearLayout>

    <RadioGroup
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/rg_title"
        android:background="@color/white"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_below="@id/ll_title">

        <RadioButton
            style="@style/text_style_16_6a3906"
            android:gravity="center"
            android:id="@+id/rbAgree"
            android:layout_width="@dimen/dp_120"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/dp_70"
            android:layout_marginRight="@dimen/dp_35"
            android:button="@null"
            android:text="@string/agreed"
            android:drawableBottom="@drawable/icon_open"/>

        <RadioButton
            style="@style/text_style_16_6a3906"
            android:gravity="center"
            android:id="@+id/rbRefuse"
            android:layout_width="@dimen/dp_120"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/dp_35"
            android:layout_marginRight="@dimen/dp_70"
            android:button="@null"
            android:text="@string/refused"/>

    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/rg_title" />

    <RelativeLayout
        android:id="@+id/rltNoData"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/rg_title">

        <TextView
            style="@style/text_style_14_999999"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_approval_note"
            android:drawableTop="@drawable/icon_illustration"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <include layout="@layout/view_loading"/>

</RelativeLayout>