<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    >




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:orientation="vertical">


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_dadada" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/pick_photo"
            android:textColor="#747474"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_dadada" />

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/camera"
            android:background="@null"
            android:textColor="#FE473C"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_dadada" />

        <Button
            android:id="@+id/btn_album"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:background="@null"
            android:text="@string/pick_photo"
            android:textColor="#FE473C"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_dadada" />


        <LinearLayout
            android:id="@+id/linear_del"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_del"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center"
                android:text="@string/delete"
                android:background="@null"
                android:textColor="#FE473C"
                android:textSize="16sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/color_dadada" />


        </LinearLayout>


        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:background="@null"
            android:textColor="#FE473C"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_dadada" />
    </LinearLayout>

</RelativeLayout>