<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF2F2F2">

        <LinearLayout
            android:id="@+id/ll_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@color/main_color">

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:background="@color/transparent"
                android:src="@mipmap/icon_top_back"
                android:padding="@dimen/dp_15"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/nick_name"
                android:gravity="center"
                style="@style/text_style_16_6a3906"/>

            <TextView
                android:id="@+id/ok"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:gravity="center"
                style="@style/text_style_12_6a3906"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:layout_marginTop="@dimen/dp_14"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_16"
            android:background="@android:color/white"
            >

            <TextView
                style="@style/text_style_14_323232"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/old_pwd"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    style="@style/text_style_14_323232"
                    android:id="@+id/et_old_pwd"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_height="match_parent"
                    android:hint="@string/pls_enter_old_pwd"
                    android:drawablePadding="@dimen/dp_14"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/dp_12"
                    android:paddingBottom="@dimen/dp_12"
                    android:paddingTop="@dimen/dp_12"
                    android:singleLine="true"
                    android:background="@null"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="@dimen/dp_14"
                    android:src="@mipmap/icon_password_hide"
                    android:visibility="invisible"/>

            </LinearLayout>


            <ImageView
                android:id="@+id/et_old_pwd_clear"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:padding="15dp"
                android:src="@mipmap/icon_edit_clear"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_dadada" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_16"
            android:background="@color/white">

            <TextView
                style="@style/text_style_14_323232"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/new_pwd"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    style="@style/text_style_14_323232"
                    android:id="@+id/et_new_password"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_input_login_password"
                    android:drawablePadding="@dimen/dp_14"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/dp_12"
                    android:paddingBottom="@dimen/dp_12"
                    android:paddingTop="@dimen/dp_12"
                    android:singleLine="true"
                    android:background="@null" />

                <ImageView
                    android:id="@+id/iv_psw_hide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="@dimen/dp_14"
                    android:padding="15dp"
                    android:src="@mipmap/icon_password_hide"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/et_new_pwd_clear"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:padding="15dp"
                android:src="@mipmap/icon_edit_clear"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_dadada" />



        <Button
            android:id="@+id/btn_commit"
            android:layout_width="match_parent"
            android:layout_height="46dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="@dimen/dp_14"
            android:layout_marginRight="@dimen/dp_14"
            android:background="@drawable/button_red_selector"
            android:text="@string/confirm_commit"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

    </LinearLayout>

    <include layout="@layout/view_loading"/>

</RelativeLayout>